--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,3 @@
-
 * {
     box-sizing: border-box;
     -moz-box-sizing: border-box;
@@ -55,11 +54,38 @@
     left: 0px;
 }
 
-svg {
-  box-shadow: 0px 0px 10px black;
+
+.raceDisplay {
+  border-style : groove;
+    border: :20px;
+  width: 98%;
+  height: 90%;
+  position: absolute;
+z-index:0;
 }
+
+.infoDisplay {
+  padding-top: 25%;
+  position: relative;
+  text-align: center;
+  z-index:1;
+}
+
 rect {
   fill: rgba(0,0,0,.9);
 }
 
+.titles {text-align: center;}
+
+.buttons {
+  text-align: center;
+}
+
+.settingsBox {
+  margin:5px;
+  padding: 5px;
+  border-style : groove;
+}
+
 .redstyle {color: red;}
+.bgredstyle {background-color: red;}
