--- a/css/style.css
+++ b/css/style.css
@@ -4,10 +4,6 @@
     -webkit-box-sizing: border-box;
 }
 
-html {
-      -webkit-text-size-adjust: 100%;
-}
-
 #page {
     text-align:center;
 }
@@ -39,7 +35,7 @@ z-index:0;
 }
 
 .infoDisplay {
-  padding-top: 15%;
+  padding-top: 5%;
   position: relative;
   text-align: center;
   z-index:1;
@@ -47,6 +43,10 @@ z-index:0;
 
 rect {
   fill: rgba(0,0,0,.9);
+}
+
+.text {
+  font-size: 5vh;
 }
 
 .svgText {
@@ -66,9 +66,9 @@ rect {
 }
 
 .glyphicon{
-  font-size: 2em;
+  font-size: 10vh;
 }
-.wi {font-size: 2em;}
+.wi {font-size: 10vh;}
 
 
 td {
@@ -76,7 +76,7 @@ td {
 }
 
 .legDisplay {
-  font-size: 10em;
+  font-size: 10vh;
 }
 
 .titles {text-align: center;}
