--- a/css/style.css
+++ b/css/style.css
@@ -94,3 +94,33 @@ td {
 .style {color: black;}
 .redstyle {color: red;}
 .bgredstyle {background-color: red;}
+
+.fa-star-o {
+color: #FF7700;
+}
+.fa-star {
+color: #FFDD00;
+-webkit-text-stroke-width: 2px;
+-webkit-text-stroke-color: #FF7700;
+}
+
+.isReadonly >
+.fa-star-o {
+  -webkit-text-stroke-width: 0px;
+color: rgba(0,0,0,.9);
+}
+
+.isReadonly >
+.fa-star {
+  -webkit-text-stroke-width: 0px;
+color: rgba(0,0,0,.7);
+}
+
+
+.test2 {
+position: relative;
+}
+
+.test {
+position: absolute;
+}
